--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -27,6 +27,8 @@
         </div>
       </a>
     </li>
+    
+    <li class="navList__heading">Others<i class="far fa-file-alt"></i></li>
     <li><a routerLink="math">
         <div class="navList__subheading row row--align-v-center">
           <span class="navList__subheading-icon"><i class="fas fa-briefcase-medical"></i></span>
@@ -41,5 +43,12 @@
         </div>
       </a>
     </li>
+    <li><a href="https://github.com/SilverLinings89/VirusSimulator" target="_blank">
+      <div class="navList__subheading row row--align-v-center">
+        <span class="navList__subheading-icon"><i class="fas fa-briefcase-medical"></i></span>
+        <span class="navList__subheading-title">Github</span>
+      </div>
+    </a>
+  </li>
   </ul>
 </div>
