--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -8,7 +8,7 @@
   .sidenav__list {
     padding: 0;
     margin-top: 85px;
-    list-style-type: none;
+    list-style-type: none!important;
   }
 
   .sidenav__list-item {
@@ -20,3 +20,8 @@
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
   }
+
+.navlist {
+  list-style-type: none;
+  padding-left:0px;
+}
