--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 $color-fiord: #1A2D41; // sidenav bg & dark text
 $color-white: #FFF; // card bg
 $color-athens-gray: #EAEDF1; // content bg
