--- a/src/app/map-view/map-view.component.html
+++ b/src/app/map-view/map-view.component.html
@@ -4,13 +4,13 @@
 <button mat-raised-button color="primary" (click)="reset()" style="margin-right: 20px;">Reset animation</button>
 <!-- TODO: The 'invert' property no longer exists -->
 <!-- TODO: The 'tickInterval' property no longer exists -->
-<!-- TODO: The 'vertical' property no longer exists -->
+<!-- 
 <mat-slider
     class="example-margin"
     [disabled]="disabled"
     [max]="max"
     [min]="min"
     [step]="step"
-    [thumbLabel]="thumbLabel"
     [(ngModel)]="currentTime"><input matSliderThumb />
 </mat-slider>
+TODO: The 'vertical' property no longer exists -->
